--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Patrick Bachmann"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Test actions My awesome biography constrained to a sentence or two goes here."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
