--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ search: true
 
 # Build settings
 markdown: kramdown
+repository: "whiskeywrangler/bachblog"
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
